fixed text overflow in event box when snippet is too long

--- a/src/components/Timeline/Timeline.style.css
+++ b/src/components/Timeline/Timeline.style.css
@@ -170,9 +170,11 @@
 	justify-content: space-between;
 }
 .snippet-box {
+	word-wrap: break-word;
 	text-align: center;
 	height: 53px;
 	width: 150px;
+
 	/* border: solid red 2px; */
 
 	margin: -18px 0px 0px -10px;
